--- a/practical_work_1/package.json
+++ b/practical_work_1/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "backendless": "^7.0.2",
+    "eventemitter3": "^5.0.1",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
